src/widgets/snapshots/timr_tui__widgets__event_test__event_since_hh12mm.snap
---
source: src/widgets/event_test.rs
expression: t.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"            ██ ██ █████ Y  █████ █████ █████ D     ██ ██ ██    █████ █████    █████ █████           "
"            ██ ██ ██ ██       ██ ██    ██          ██ ██ ██ ██    ██ ██ ██ ██ ██ ██ ██ ██           "
"            █████ ██ ██    █████ █████ █████       ██ █████    █████ ██ ██    ██ ██ ██ ██           "
"               ██ ██ ██       ██    ██    ██       ██    ██ ██    ██ ██ ██ ██ ██ ██ ██ ██           "
"               ██ █████    █████ █████ █████       ██    ██    █████ █████    █████ █████           "
"                                                                                                    "
"                                      SINCE 1983-06-21 12:00 AM                                     "
"                                RELEASE DATE OF MARIO BROS. IN JAPAN                                "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
