src/widgets/snapshots/timr_tui__widgets__event_test__event_since_hhmm.snap
---
source: src/widgets/event_test.rs
expression: t.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"            ██ ██ █████ Y  █████ █████ █████ D     ██ ██ ██    █████ █████    █████ █████           "
"            ██ ██ ██ ██       ██ ██    ██          ██ ██ ██ ██    ██ ██ ██ ██ ██ ██ ██ ██           "
"            █████ ██ ██    █████ █████ █████       ██ █████    █████ ██ ██    ██ ██ ██ ██           "
"               ██ ██ ██       ██    ██    ██       ██    ██ ██    ██ ██ ██ ██ ██ ██ ██ ██           "
"               ██ █████    █████ █████ █████       ██    ██    █████ █████    █████ █████           "
"                                                                                                    "
"                                       SINCE 1983-06-21 00:00                                       "
"                                RELEASE DATE OF MARIO BROS. IN JAPAN                                "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
