src/widgets/snapshots/timr_tui__widgets__event_test__event_until.snap
---
source: src/widgets/event_test.rs
expression: t.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"            █████ █████ Y  █████ █████ ██ ██ D  █████ █████    █████ █████    █████ █████           "
"               ██ ██          ██ ██ ██ ██ ██    ██ ██ ██ ██ ██    ██ ██ ██ ██ ██ ██ ██ ██           "
"            █████ █████    █████ ██ ██ █████    ██ ██ █████    █████ ██ ██    ██ ██ ██ ██           "
"            ██       ██    ██    ██ ██    ██    ██ ██    ██ ██    ██ ██ ██ ██ ██ ██ ██ ██           "
"            █████ █████    █████ █████    ██    █████ █████    █████ █████    █████ █████           "
"                                                                                                    "
"                                          UNTIL 2050-01-01                                          "
"                                            HELLO FUTURE                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
